<resources>
    <string name="app_name">OptiTripEV</string>
    <string name="title_home">Input</string>
    <string name="title_dashboard">Result</string>
    <string name="title_notifications">Config</string>
    <string name="header_input">Info Input</string>
    <string name="hint_total_distance">Total trip distance in km</string>
    <string name="hint_total_distance_mi">Total trip distance in mi</string>
    <string name="hint_charge_power">Charger power in kW</string>
    <string name="hint_charge_target">Charge target in SOC %</string>
    <string name="hint_charge_delay">Overhead time at charger in minutes</string>
    <string name="hint_usable_energy">Usable energy in kWh</string>
    <string name="hint_initial_soc">Initial SOC as a %</string>
    <string name="hint_first_charge_station">Distance to 1st charger in km</string>
    <string name="hint_first_charge_station_mi">Distance to 1st charger in mi</string>
    <string name="info_input">On first use check consumption numbers for your EV. Next complete below input with all details for this trip. While changing input optimal speed to travel will be calculated.</string>
    <string name="action_calculate">Calculate Speed</string>
    <string name="header_config">Configuration</string>
    <string name="info_config">Update these consumption numbers to match your own EV and get better results.</string>
    <string name="header_info_output">Info Output</string>
    <string name="info_output">This is the optimal speed to ride at given the consumption numbers from your configuration.</string>
    <string name="result_best_speed">Best average speed to use %d %s</string>
    <string name="result_final_speed">Final speed equivalent %d %s</string>
    <string name="result_number_of_charges">Total number of charges %d charge(s)</string>
    <string name="result_total_trip_time">Total trip time %s</string>
    <string name="result_charge_equiv_speed">Charging speed equiv. %d %s</string>
    <string name="result_total_charge_time">Total charge time %s</string>
    <string name="result_total_driving_time">Total riding/driving time %s</string>
    <string name="result_distance_charge_1">Distance to 1st charger %d %s</string>
    <string name="result_distance_charge_2">Distance to 2nd charger %d %s</string>
    <string name="result_distance_charge_3">Distance to 3rd charger %d %s</string>
    <string name="result_time_per_charge">Time per charge %s</string>
    <string name="result_total_time_per_charge">Total time per charge %s</string>
    <string name="result_total_trip_energy">Total trip Energy %.1f kWh</string>
    <string name="result_optimal_speed">Optimal speed is %d %s with total ride+charge time of %s</string>
    <string name="result_optimal_speed_alternative">Speed of %d %s results in time of %s</string>
    <string name="err_calculating_result">Problem calculating result, check input</string>
    <string name="title_about">About</string>
    <string name="header_about">OptiTripEV</string>
    <string name="info_about_app">This app calculates the optimal ride speed for EV given known consumption values. Based on OPTITRIP EV v1.4 spreadsheet created by Stephane Melançon aka DOCTORBASS 2018</string>
    <string name="info_about_people">This App was created from that spreadsheet by Hans Cappelle and made available to the community at bitbucket project website https://github.com/hanscappelle/optitrip-ev-android</string>
    <string name="info_about_testing">Everyone can contribute on that website. If you want to test early releases as a beta tester you can subscribe at https://play.google.com/apps/testing/be.hcpl.android.optitripev</string>
    <string name="info_about_future">Feel free to contact us with issues, remarks or feature requests.</string>
    <string name="action_update">Update</string>
    <string name="action_recover">Recover</string>
    <string name="info_config_units">Switch from metric to imperial system here</string>
    <string name="option_use_metric">Metric (km, km/h)</string>
    <string name="option_use_imperial">Imperial (mi, mph)</string>
    <string name="description_navigate_back">Navigate Back</string>
    <string name="option_reset">Reset all values here to defaults</string>
    <string name="label_reset">Reset</string>
</resources>