<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.result.ResultFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_default">

        <TextView
            android:id="@+id/info_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_default"
            android:text="@string/info_output" />

        <TextView
            android:id="@+id/result_best_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ccc"
            android:paddingTop="@dimen/padding_half"
            android:paddingBottom="@dimen/padding_half"
            android:text="@string/result_best_speed"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/result_final_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_half"
            android:paddingBottom="@dimen/padding_half"
            android:text="@string/result_final_speed"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/result_number_of_charges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ccc"
            android:paddingTop="@dimen/padding_half"
            android:paddingBottom="@dimen/padding_half"
            android:text="@string/result_number_of_charges"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/result_total_trip_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_half"
            android:paddingBottom="@dimen/padding_half"
            android:text="@string/result_total_trip_time"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/result_charge_equiv_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ccc"
            android:paddingTop="@dimen/padding_half"
            android:paddingBottom="@dimen/padding_half"
            android:text="@string/result_charge_equiv_speed"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/result_total_charge_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_half"
            android:paddingBottom="@dimen/padding_half"
            android:text="@string/result_total_charge_time"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/result_driving_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ccc"
            android:paddingTop="@dimen/padding_half"
            android:paddingBottom="@dimen/padding_half"
            android:text="@string/result_total_driving_time"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/result_distance_charge_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_half"
            android:paddingBottom="@dimen/padding_half"
            android:text="@string/result_distance_charge_1"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/result_distance_charge_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ccc"
            android:paddingTop="@dimen/padding_half"
            android:paddingBottom="@dimen/padding_half"
            android:text="@string/result_distance_charge_2"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/result_distance_charge_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_half"
            android:paddingBottom="@dimen/padding_half"
            android:text="@string/result_distance_charge_3"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/result_time_per_charge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ccc"
            android:paddingTop="@dimen/padding_half"
            android:paddingBottom="@dimen/padding_half"
            android:text="@string/result_time_per_charge"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/result_total_time_per_charge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_half"
            android:paddingBottom="@dimen/padding_half"
            android:text="@string/result_total_time_per_charge"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/result_total_trip_energy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ccc"
            android:paddingTop="@dimen/padding_half"
            android:paddingBottom="@dimen/padding_half"
            android:text="@string/result_total_trip_energy"
            android:textSize="@dimen/text_size_large" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>