<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="be.hcpl.android.optitripev.ui.home.HomeFragment"
        android:label="@string/header_input"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_output"
        android:name="be.hcpl.android.optitripev.ui.result.ResultFragment"
        android:label="@string/header_info_output"
        tools:layout="@layout/fragment_result" />

    <fragment
        android:id="@+id/navigation_config"
        android:name="be.hcpl.android.optitripev.ui.config.ConfigFragment"
        android:label="@string/header_config"
        tools:layout="@layout/fragment_config" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="be.hcpl.android.optitripev.ui.about.AboutFragment"
        android:label="@string/header_about"
        tools:layout="@layout/fragment_about" />

</navigation>