<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_default"
    tools:context=".ui.about.AboutFragment">

    <TextView
        android:id="@+id/header_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_about"
        android:textSize="@dimen/text_size_extra_large" />

    <TextView
        android:id="@+id/about_app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_about_app_version"
        android:layout_marginBottom="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_default" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_about_app"
        android:layout_marginBottom="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_default" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_about_people"
        android:layout_marginBottom="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_default"
        android:autoLink="all"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_about_testing"
        android:layout_marginBottom="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_default"
        android:autoLink="all"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_about_future"
        android:layout_marginBottom="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_default"
        android:autoLink="all"/>

</androidx.appcompat.widget.LinearLayoutCompat>